# bot-cod

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: deploy_vds.sh
src/: bot.py
state/: posts.json  tg_roles.json  user_links.json
state/archives/ticket_1471909011841482908_20260213_164100/: dialog.json  dialog.txt
state/archives/ticket_1471910472897921044_20260213_164649/: dialog.json  dialog.txt
state/archives/ticket_1471927478917271583_20260213_175435/: dialog.json  dialog.txt
web/: editor.html  editor_improved.html
