[project]
name = "discord-telegram-ticket-bridge"
version = "0.1.0"
description = "Discord ticket bot with Telegram control bridge"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "python-telegram-bot>=21.5",
  "python-dotenv>=1.0.1",
  "aiohttp>=3.10.0",
  "python-docx>=1.1.2",
]

[tool.ruff]
line-length = 100

